--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
@@ -41,7 +41,7 @@
     </Style>
 
     <Style x:Key="DangerousMenuBarButtonStyle" TargetType="Button" BasedOn="{StaticResource MenuBarButtonStyle}">
-        <Setter Property="Background" Value="Red" />
+        <Setter Property="Background" Value="DarkBlue" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="Width" Value="100" />
     </Style>
