--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersMapView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersMapView.xaml
@@ -6,10 +6,17 @@
       xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views" 
       xmlns:maps="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF" 
       xmlns:c="clr-namespace:Vavatech.Shop.WpfClient.Converters"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomersViewModel}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CustomersMapView">
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 
     <Page.Resources>
         <c:LocationConverter x:Key="LocationConverter" />
@@ -29,7 +36,6 @@
             <!-- Map -->
 
             <maps:Map x:Name="MyMap" CredentialsProvider="YourSecretKey" 
-                      Center="{Binding CenterLocation, Converter={StaticResource LocationConverter}}"
                       ZoomLevel="6" >
 
                 <maps:MapItemsControl ItemsSource="{Binding Customers}" >
