--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
@@ -1,18 +1,21 @@
-﻿<Page x:Class="Vavatech.Shop.WpfClient.Views.CustomersView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
-      xmlns:vm="clr-namespace:Vavatech.Shop.ViewModels;assembly=Vavatech.Shop.ViewModels" 
-      xmlns:m="clr-namespace:Vavatech.Shop.Models;assembly=Vavatech.Shop.Models"
-      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-      xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-      DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomersViewModel}"
-      x:Name="Customers"
-      mc:Ignorable="d"       
-      d:DesignHeight="450" d:DesignWidth="800"      
-      Title="CustomersView">
+﻿<Page
+    x:Class="Vavatech.Shop.WpfClient.Views.CustomersView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+    xmlns:m="clr-namespace:Vavatech.Shop.Models;assembly=Vavatech.Shop.Models"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+    xmlns:uc="clr-namespace:Vavatech.Shop.WpfClient.UserControls"
+    xmlns:vm="clr-namespace:Vavatech.Shop.ViewModels;assembly=Vavatech.Shop.ViewModels"
+    x:Name="Customers"
+    Title="CustomersView"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CustomersViewModel}"
+    mc:Ignorable="d">
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -39,7 +42,7 @@
 
     <DockPanel>
 
-        <!-- Search Panel -->
+        <!--  Search Panel  -->
 
         <StackPanel DockPanel.Dock="Top">
 
@@ -47,17 +50,17 @@
 
                 <Style TargetType="Label">
                     <Setter Property="Width" Value="100" />
-                    <Setter Property="Margin" Value="5"  />
+                    <Setter Property="Margin" Value="5" />
                 </Style>
 
                 <Style TargetType="TextBox">
                     <Setter Property="Width" Value="200" />
-                    <Setter Property="Margin" Value="5"  />
+                    <Setter Property="Margin" Value="5" />
                 </Style>
 
             </StackPanel.Resources>
 
-            <StackPanel Orientation="Horizontal" >
+            <StackPanel Orientation="Horizontal">
 
                 <Label>First name</Label>
                 <TextBox Text="{Binding SearchCriteria.FirstName}" />
@@ -67,17 +70,35 @@
 
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" >
+            <!--  Credit Search Criteria  -->
+            <StackPanel DataContext="{Binding SearchCriteria.Credit}" Orientation="Horizontal">
 
                 <Label>Credit from</Label>
-                <TextBox Width="200" Text="{Binding SearchCriteria.CreditAmountFrom}" />
+                <TextBox Width="200" Text="{Binding CreditAmountFrom}" />
 
                 <Label>Credit to</Label>
-                <TextBox Width="200" Text="{Binding SearchCriteria.CreditAmountTo}" />
+                <TextBox Width="200" Text="{Binding CreditAmountTo}" />
 
             </StackPanel>
 
-            <Button Command="{Binding SearchCommand}" Background="DarkBlue">Search</Button>
+            <!--  Period Search Criteria  -->
+
+            <StackPanel DataContext="{Binding SearchCriteria.Period}" Orientation="Horizontal">
+
+                <Label>Period from</Label>
+                <DatePicker SelectedDate="{Binding From, ValidatesOnNotifyDataErrors=True}" />
+
+                <Label>Period to</Label>
+                <DatePicker SelectedDate="{Binding To, ValidatesOnNotifyDataErrors=True}" />
+
+            </StackPanel>
+
+
+            <!--  Address Search Criteria  -->
+
+            <uc:AddressSearchCriteriaView DataContext="{Binding SearchCriteria.Address}" />
+
+            <Button Background="DarkBlue" Command="{Binding SearchCommand}">Search</Button>
 
         </StackPanel>
 
@@ -91,65 +112,72 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <!-- Customers -->
+            <!--  Customers  -->
 
-            <!--<ListBox             
+            <!--<ListBox
             ItemsSource="{Binding Path=Customers}"
             ItemTemplate="{StaticResource CustomerTemplate}"
             SelectedItem="{Binding Path=SelectedCustomer}" >
-          
+
         </ListBox>-->
 
             <Grid>
 
-            <StackPanel>
+                <StackPanel>
 
-                <Label>TotalCreditAmount</Label>
-                <TextBlock Text="{Binding TotalCreditAmount}" />
+                    <Label>TotalCreditAmount</Label>
+                    <TextBlock Text="{Binding TotalCreditAmount}" />
 
 
-                <ScrollViewer>
+                    <ScrollViewer>
 
-                    <ListView ItemsSource="{Binding Source={StaticResource CustomersViewSource}}"
-                  SelectedItem="{Binding SelectedCustomer}"
-                  Width="500"
-                      Height="600"
-                  x:Name="CustomersListView"
-                  >
+                        <ListView
+                            x:Name="CustomersListView"
+                            Width="500"
+                            Height="600"
+                            ItemsSource="{Binding Source={StaticResource CustomersViewSource}}"
+                            SelectedItem="{Binding SelectedCustomer}">
 
-                        <ListView.View>
-                            <GridView>
-                                <GridView.Columns>
-                                    <GridViewColumn Width="100" Header="First name" DisplayMemberBinding="{Binding FirstName}" />
-                                    <GridViewColumn x:Name="LastNameHeader" Header="Last name" DisplayMemberBinding="{Binding LastName}" >
-                                        <!--<GridViewColumn.Width>
+                            <ListView.View>
+                                <GridView>
+                                    <GridView.Columns>
+                                        <GridViewColumn
+                                            Width="100"
+                                            DisplayMemberBinding="{Binding FirstName}"
+                                            Header="First name" />
+                                        <GridViewColumn
+                                            x:Name="LastNameHeader"
+                                            DisplayMemberBinding="{Binding LastName}"
+                                            Header="Last name">
+                                            <!--<GridViewColumn.Width>
                                 <MultiBinding Converter="">
                                     <Binding ElementName="CustomersListView" Path="ActualWidth" />
                                     <Binding ElementName="LastNameHeader" Path="Header" />
                                 </MultiBinding>
                             </GridViewColumn.Width>-->
-                                    </GridViewColumn>
+                                        </GridViewColumn>
 
-                                    <GridViewColumn Header="Customer Type" DisplayMemberBinding="{Binding CustomerType}" />
+                                        <GridViewColumn DisplayMemberBinding="{Binding CustomerType}" Header="Customer Type" />
 
-                                    <GridViewColumn Header="Credit Amount" DisplayMemberBinding="{Binding CreditAmount}" />
+                                        <GridViewColumn DisplayMemberBinding="{Binding CreditAmount}" Header="Credit Amount" />
 
-                                    <GridViewColumn Header="Country" DisplayMemberBinding="{Binding Country}" />
+                                        <GridViewColumn DisplayMemberBinding="{Binding Country}" Header="Country" />
 
-                                </GridView.Columns>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                                    </GridView.Columns>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
 
-                </ScrollViewer>
-
-
-            </StackPanel>
+                    </ScrollViewer>
 
 
-                <ProgressBar Width="100"
-                             Height="20"
-                             IsIndeterminate="True">
+                </StackPanel>
+
+
+                <ProgressBar
+                    Width="100"
+                    Height="20"
+                    IsIndeterminate="True">
 
                     <ProgressBar.Style>
                         <Style TargetType="ProgressBar">
@@ -168,7 +196,7 @@
 
             </Grid>
 
-            <!--<DataGrid 
+            <!--<DataGrid
             ItemsSource="{Binding Customers}"
             SelectedItem="{Binding SelectedCustomer}"
             AutoGenerateColumns="False">
@@ -181,16 +209,16 @@
                             <Image Source="{Binding Avatar}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-                    
+
                 </DataGridTemplateColumn>
                 <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" />
                 <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" />
                 <DataGridCheckBoxColumn Header="Removed" Binding="{Binding IsRemoved}" />
             </DataGrid.Columns>
-            
+
         </DataGrid>-->
 
-            <!-- Selected customer -->
+            <!--  Selected customer  -->
 
             <StackPanel Grid.Column="1" DataContext="{Binding SelectedCustomer}">
 
@@ -209,13 +237,12 @@
                     <Style TargetType="TextBox">
                         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}" />
                         <Style.Triggers>
-                            <Trigger Property="Validation.HasError" Value="True" >
+                            <Trigger Property="Validation.HasError" Value="True">
 
-                                <!--<Setter Property="ToolTip"  
+                                <!--<Setter Property="ToolTip"
                                         Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)/ErrorContent}" />-->
 
-                                <Setter Property="ToolTip"
-                                        Value="{Binding RelativeSource={RelativeSource Mode=Self}, Path=(Validation.Errors)/ErrorContent}" />
+                                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Mode=Self}, Path=(Validation.Errors)/ErrorContent}" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -223,26 +250,23 @@
 
                 </StackPanel.Resources>
 
-                <TextBlock FontWeight="Bold" FontSize="16" Text="{Binding FullName}" />
+                <TextBlock
+                    FontSize="16"
+                    FontWeight="Bold"
+                    Text="{Binding FullName}" />
 
                 <Label>First name</Label>
-                <TextBox
-                Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
-                Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{StaticResource ErrorTemplate}" />
 
                 <Label>Last name</Label>
-                <TextBox Text="{Binding LastName,UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                 <Label>Customer type</Label>
-                <ComboBox SelectedItem="{Binding CustomerType}"
-                      ItemsSource="{Binding ElementName=Customers, Path=DataContext.CustomerTypes}" />
+                <ComboBox ItemsSource="{Binding ElementName=Customers, Path=DataContext.CustomerTypes}" SelectedItem="{Binding CustomerType}" />
 
 
                 <Label>Country</Label>
-                <ComboBox 
-                      ItemsSource="{Binding ElementName=Customers, Path=DataContext.Countries}"
-                      SelectedItem="{Binding Country}"
-                    />
+                <ComboBox ItemsSource="{Binding ElementName=Customers, Path=DataContext.Countries}" SelectedItem="{Binding Country}" />
 
                 <StackPanel x:Name="Poland">
                     <Label>Pesel</Label>
@@ -256,12 +280,12 @@
                         <Style TargetType="StackPanel">
                             <Setter Property="Visibility" Value="Collapsed" />
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding Country}" Value="{x:Static m:Country.Poland}" >
+                                <DataTrigger Binding="{Binding Country}" Value="{x:Static m:Country.Poland}">
                                     <Setter Property="Visibility" Value="Visible" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
-                        
+
                     </StackPanel.Style>
                 </StackPanel>
 
@@ -277,7 +301,7 @@
                         <Style TargetType="StackPanel">
                             <Setter Property="Visibility" Value="Collapsed" />
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding Country}" Value="{x:Static m:Country.Germany}" >
+                                <DataTrigger Binding="{Binding Country}" Value="{x:Static m:Country.Germany}">
                                     <Setter Property="Visibility" Value="Visible" />
                                 </DataTrigger>
                             </Style.Triggers>
@@ -297,8 +321,8 @@
                 <Button Background="DarkRed" Command="{Binding ElementName=Customers, Path=DataContext.RemoveCustomerCommand}">Remove</Button>
                 <Button Background="DarkGreen" Command="{Binding ElementName=Customers, Path=DataContext.ShowCustomerCommand}">Show</Button>
 
-                
-                
+
+
             </StackPanel>
 
         </Grid>
