--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/ControlTemplates.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/ControlTemplates.xaml
@@ -1,14 +1,13 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <ControlTemplate x:Key="RounderButtonTemplate"
-                         TargetType="Button" >
+    <ControlTemplate x:Key="RounderButtonTemplate" TargetType="Button">
 
 
-        <Border CornerRadius="5"
-                    Background="{TemplateBinding Background}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    BorderBrush="{TemplateBinding BorderBrush}" >
+        <Border
+            Background="{TemplateBinding Background}"
+            BorderBrush="{TemplateBinding BorderBrush}"
+            BorderThickness="{TemplateBinding BorderThickness}"
+            CornerRadius="5">
 
             <ContentPresenter VerticalAlignment="Center" />
 
@@ -31,8 +30,30 @@
                 <Setter Property="Button.Background" Value="White" />
             </Trigger>
 
-            
+
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    
+
+    <!--<ControlTemplate x:Key="ErrorTemplate">
+        <DockPanel>
+            <Border BorderBrush="Red" BorderThickness="3">
+
+                <AdornedElementPlaceholder />
+
+            </Border>
+        </DockPanel>
+    </ControlTemplate>-->
+
+    <ControlTemplate x:Key="ErrorTemplate">
+        <StackPanel>
+            <AdornedElementPlaceholder x:Name="placeholder" />
+            <TextBlock
+                FontSize="11"
+                FontStyle="Italic"
+                Foreground="Red"
+                Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
+        </StackPanel>
+    </ControlTemplate>
+
+
 </ResourceDictionary>
