--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShapesView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShapesView.xaml
@@ -2,6 +2,7 @@
     x:Class="Vavatech.Shop.WpfClient.Views.ShapesView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     xmlns:cs="clr-namespace:Vavatech.Shop.WpfClient.CustomShapes"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
@@ -11,6 +12,15 @@
     d:DesignWidth="800"
     Background="White"
     mc:Ignorable="d">
+
+    <Page.Resources>
+
+        <!--  Freeze https://docs.microsoft.com/pl-pl/dotnet/desktop/wpf/advanced/presentationoptions-freeze-attribute?view=netframeworkdesktop-4.8  -->
+        <SolidColorBrush
+            x:Key="MyColorBrush"
+            PresentationOptions:Freeze="True"
+            Color="Blue" />
+    </Page.Resources>
 
     <StackPanel>
 
@@ -25,7 +35,7 @@
         <Rectangle
             Width="300"
             Height="100"
-            Fill="Green"
+            Fill="{StaticResource MyColorBrush}"
             RadiusX="5"
             RadiusY="5"
             Stroke="Black"
