Zmiana tła designera

--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
@@ -98,4 +98,14 @@
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}" />
     </Style>
 
+    <Style x:Key="MyDesignPageStyle" TargetType="Page">
+        <Setter Property="Background" Value="DarkBlue" />
+        <Setter Property="Foreground" Value="White" />
+    </Style>
+
+    <Style x:Key="MyDesignUserControlStyle" TargetType="UserControl">
+        <Setter Property="Background" Value="DarkGreen" />
+        <Setter Property="Foreground" Value="White" />
+    </Style>
+
 </ResourceDictionary>
