--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Images.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Images.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
     <BitmapImage x:Key="HomeImage" UriSource="/Assets/House-08.png" />
@@ -12,10 +11,10 @@
     <BitmapImage x:Key="SettingImage" UriSource="/Assets/Setting_2-WF.png" />
 
 
-    <BitmapImage x:Key="HappyImage" UriSource="/Assets/AHappy-01.png" />
+    <BitmapImage x:Key="HappyImage" UriSource="/Assets/Happy-01.png" />
     <BitmapImage x:Key="SmilyImage" UriSource="/Assets/Happy - 04.pngg" />
     <BitmapImage x:Key="AnnoyedImage" UriSource="/Assets/Annoyed.png" />
-  
+
 
     <BitmapImage x:Key="SettingsImage" UriSource="https://picsum.photos/640/480/?image=481" />
 
